--- a/src/Components/LeftColumn/LeftColumn.css
+++ b/src/Components/LeftColumn/LeftColumn.css
@@ -1,12 +1,12 @@
 .LeftColumn__container {
   display: flex;
   flex-direction: column;
-  width: 325px;
+  width: 50%;
   min-width: 325px;
   padding: 15px;
   padding-bottom: 0;
   box-sizing: border-box;
-  border-right: solid 1px #373748;
+  border-right: solid 1px rgb(43, 52, 103);
   height: 100vh;
 }
 .LeftColumn__container::-webkit-scrollbar {
@@ -15,17 +15,17 @@
 
 .LeftColumnHeader__container {
   display: flex;
-  border-bottom: solid 1px #373748;
+  border-bottom: solid 1px rgb(43, 52, 103);
   width: 100%;
   justify-content: space-between;
   padding: 0 0 15px 10px;
 
   box-sizing: border-box;
 }
-.LeftColumnHeader__projectName{
+.LeftColumnHeader__projectName {
   width: 100%;
   height: 44px;
-  background-color: #BAD7E9;
+  background-color: #bad7e9;
   border-radius: 10px;
   font-size: 12px;
   text-transform: uppercase;
@@ -35,6 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .LeftColumn__content {
@@ -52,24 +53,14 @@
   column-gap: 10px;
   align-items: center;
   position: relative;
-  background-color: #BAD7E9;
+  background-color: #bad7e9;
   border-radius: 10px;
-  
 }
 
 .LeftColumn__nav-btn__container:hover {
   background-color: #94bad2;
   border-radius: 10px;
 }
-
-.LeftColumn__nav-btn {
-  padding: 15px 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 110%;
-  transition: all 0.3s ease 0s;
-}
-
 
 .LeftColumn__list {
   list-style-type: none;
@@ -93,12 +84,10 @@
 .LeftColumn__item-arrow.opened {
   background: url("../../Media/openedList.svg") right center no-repeat;
   cursor: pointer;
-
 }
 .LeftColumn__item-arrow.closed {
   background: url("../../Media/closedList.svg") right center no-repeat;
   cursor: pointer;
-
 }
 .LeftColumn__menuBtn {
   background: url("../../Media/leftMenu.svg") center no-repeat;
@@ -113,35 +102,38 @@
 .LeftColumn__nav-btn__container:hover > .LeftColumn__menuBtn {
   opacity: 1;
 }
-.active-tab, .active-tab_closed {
-  background-color: #EB455F;
+.active-tab,
+.active-tab_closed {
+  background-color: #eb455f;
   border-radius: 10px;
   color: #ffff;
-
 }
 .active-tab > * {
   color: #ffff;
 }
 .LeftColumn__nav-btn__container:hover.active-tab {
-  background-color: #EB455F;
+  background-color: #eb455f;
 }
 .LeftColumn__nav-btn__container:hover.done {
-  background-color: rgba(17, 168, 27, .3);
+  background-color: rgba(17, 168, 27, 0.3);
 }
 .LeftColumn__nav-btn__container.done {
-  background-color: rgba(17, 168, 27, .2);
+  background-color: rgba(17, 168, 27, 0.2);
+}
+.LeftColumn__nav-btn__container.active-tab.done {
+  background-color: rgba(17, 168, 27, 0.7);
 }
 .dropZone {
   height: 20px;
   width: 98%;
-  transition: all  .3s ease;
+  transition: all 0.3s ease;
   position: relative;
   z-index: 2;
 }
 .dropZone.active {
-  background-color: #48485a;
+  background-color: #bad7e9;
   height: 50px;
   margin: 0;
   border-radius: 10px;
-  border: 2px dotted #66667f ;
+  border: 2px dotted #42aaeb;
 }
